--- a/NDCGPrecRecall.ipynb
+++ b/NDCGPrecRecall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "  '657400': 0}}"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,13 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "precisions=[]\n",
     "recalls=[]\n",
-    "common_queries = set(qrels_data.keys()) & set(ground_truth.keys())\n",
+    "common_queries = set(qrels_data.keys()) & set(scores_data.keys())\n",
     "def intersection_and_length(dict, key, other_list):\n",
     "    dict_list = dict.get(key, [])\n",
     "    if not dict_list:\n",
@@ -505,17 +505,17 @@
     "    intersection = set(dict_list) & set(other_list)\n",
     "    return len(intersection)\n",
     "for qid in common_queries:\n",
-    "    doc_ids=system_output[qid]\n",
-    "    len_of_intersection=intersection_and_length(ground_truth,qid,doc_ids)\n",
+    "    doc_ids=scores_data[qid]\n",
+    "    len_of_intersection=intersection_and_length(qrels_data,qid,doc_ids)\n",
     "    precisions.append([qid,(len_of_intersection/len(doc_ids))])\n",
-    "    base_recall=len(ground_truth[qid])\n",
+    "    base_recall=len(qrels_data[qid])\n",
     "    recalls.append([qid,(len_of_intersection/base_recall)if base_recall!=0 else 0])\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "0.5441860465116277"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
