Remove unnecessary files and update file paths

--- a/NDCGPrecRecall.ipynb
+++ b/NDCGPrecRecall.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qrels_file_path = './PerformanceEvaluatedFile/ordered-qrel-msmarco-2019.txt'\n",
-    "scores_file_path = './PerformanceEvaluatedFile/DAATBM25withRelevance.txt'"
+    "qrels_file_path = './qrel_file/ordered-qrel-msmarco-2019.txt'\n",
+    "scores_file_path = './relevance_file/DAATBM25withRelevance.txt'"
    ]
   },
   {
@@ -40,8 +40,7 @@
    "source": [
     "# Step 1: Create data structures\n",
     "qrels_data = read_qrel_relevance(qrels_file_path)\n",
-    "scores_data = read_qrel_relevance(scores_file_path)\n",
-    "\n"
+    "scores_data = read_qrel_relevance(scores_file_path)"
    ]
   },
   {
@@ -509,8 +508,7 @@
     "    len_of_intersection=intersection_and_length(qrels_data,qid,doc_ids)\n",
     "    precisions.append([qid,(len_of_intersection/len(doc_ids))])\n",
     "    base_recall=len(qrels_data[qid])\n",
-    "    recalls.append([qid,(len_of_intersection/base_recall)if base_recall!=0 else 0])\n",
-    "    \n"
+    "    recalls.append([qid,(len_of_intersection/base_recall)if base_recall!=0 else 0])"
    ]
   },
   {
