addeda ndcgcalculator and relative file with ndcg calculated

--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -2,12 +2,478 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_data(file_path):\n",
-    "    "
+    "    system_ranking={}\n",
+    "    with open(file_path,'r') as file:\n",
+    "        for line in file:\n",
+    "            parts=line.strip().split()\n",
+    "            qid,doc_id=parts[0],str(int(parts[2]))\n",
+    "            if qid not in system_ranking:\n",
+    "                system_ranking[qid]=[]\n",
+    "            system_ranking[qid].append(doc_id)\n",
+    "        \n",
+    "    return system_ranking\n",
+    "\n",
+    "def read_data_ground_true(file_path,keys):\n",
+    "    ground_true={}\n",
+    "    with open(file_path,'r') as file:\n",
+    "        for line in file :\n",
+    "            parts=line.strip().split()\n",
+    "            qid,doc_id,relevance=parts[0],str(int(parts[2])),int(parts[3])\n",
+    "            if qid not in keys:\n",
+    "                continue\n",
+    "            if qid not in ground_true:\n",
+    "                ground_true[qid]={}\n",
+    "            ground_true[qid][doc_id]=relevance\n",
+    "    return ground_true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'451602': ['2176453',\n",
+       "  '2176450',\n",
+       "  '5179251',\n",
+       "  '4345752',\n",
+       "  '8390518',\n",
+       "  '2244882',\n",
+       "  '5475308',\n",
+       "  '7403454',\n",
+       "  '2482418',\n",
+       "  '8540468'],\n",
+       " '527433': ['8617271',\n",
+       "  '1379245',\n",
+       "  '2496224',\n",
+       "  '1101462',\n",
+       "  '7514088',\n",
+       "  '3294600',\n",
+       "  '8306451',\n",
+       "  '1101460',\n",
+       "  '1993691',\n",
+       "  '3786813'],\n",
+       " '1117099': ['8093931',\n",
+       "  '6122723',\n",
+       "  '4458512',\n",
+       "  '2398222',\n",
+       "  '334615',\n",
+       "  '7407593',\n",
+       "  '8093933',\n",
+       "  '8093927',\n",
+       "  '8152834',\n",
+       "  '6122720'],\n",
+       " '1110199': ['398442',\n",
+       "  '2925378',\n",
+       "  '554521',\n",
+       "  '6392463',\n",
+       "  '6392469',\n",
+       "  '5846443',\n",
+       "  '3588619',\n",
+       "  '507875',\n",
+       "  '4411531',\n",
+       "  '507878'],\n",
+       " '405717': ['6654655',\n",
+       "  '4828118',\n",
+       "  '2747488',\n",
+       "  '7447941',\n",
+       "  '4704978',\n",
+       "  '2747484',\n",
+       "  '2747486',\n",
+       "  '7896211',\n",
+       "  '8433858',\n",
+       "  '702386'],\n",
+       " '1114646': ['8117093',\n",
+       "  '8117087',\n",
+       "  '7196961',\n",
+       "  '8117094',\n",
+       "  '771368',\n",
+       "  '8117092',\n",
+       "  '8117088',\n",
+       "  '2911040',\n",
+       "  '6704400',\n",
+       "  '4771285'],\n",
+       " '168216': ['3344828',\n",
+       "  '1735360',\n",
+       "  '1381477',\n",
+       "  '3830857',\n",
+       "  '8252763',\n",
+       "  '4792583',\n",
+       "  '6249512',\n",
+       "  '1301472',\n",
+       "  '290826',\n",
+       "  '8639633'],\n",
+       " '19335': ['8412684',\n",
+       "  '527689',\n",
+       "  '3539483',\n",
+       "  '8635981',\n",
+       "  '527698',\n",
+       "  '527695',\n",
+       "  '7267248',\n",
+       "  '6999143',\n",
+       "  '527694',\n",
+       "  '1726'],\n",
+       " '104861': ['8260035',\n",
+       "  '5703401',\n",
+       "  '5703400',\n",
+       "  '8495099',\n",
+       "  '1304632',\n",
+       "  '5864693',\n",
+       "  '459676',\n",
+       "  '1811410',\n",
+       "  '459675',\n",
+       "  '6351571'],\n",
+       " '87181': ['1902826',\n",
+       "  '2556144',\n",
+       "  '47212',\n",
+       "  '8332551',\n",
+       "  '47211',\n",
+       "  '7666831',\n",
+       "  '6484578',\n",
+       "  '8683181',\n",
+       "  '47210',\n",
+       "  '8151921'],\n",
+       " '130510': ['7125239',\n",
+       "  '8612906',\n",
+       "  '799647',\n",
+       "  '1494936',\n",
+       "  '7501563',\n",
+       "  '996740',\n",
+       "  '996732',\n",
+       "  '1494935',\n",
+       "  '2174992',\n",
+       "  '1494930'],\n",
+       " '1114819': ['988373',\n",
+       "  '5521373',\n",
+       "  '4890560',\n",
+       "  '1315998',\n",
+       "  '1724520',\n",
+       "  '8022280',\n",
+       "  '8754404',\n",
+       "  '8754400',\n",
+       "  '6941478',\n",
+       "  '8115439'],\n",
+       " '490595': ['7839904',\n",
+       "  '7839906',\n",
+       "  '1288940',\n",
+       "  '5359212',\n",
+       "  '4842897',\n",
+       "  '805046',\n",
+       "  '7839907',\n",
+       "  '1194055',\n",
+       "  '1288938',\n",
+       "  '5359213'],\n",
+       " '207786': ['8273763',\n",
+       "  '7941579',\n",
+       "  '8273755',\n",
+       "  '2763917',\n",
+       "  '8273754',\n",
+       "  '8273758',\n",
+       "  '7599318',\n",
+       "  '8273759',\n",
+       "  '8273757',\n",
+       "  '6031630'],\n",
+       " '1115776': ['8106324',\n",
+       "  '4314171',\n",
+       "  '4314178',\n",
+       "  '8106323',\n",
+       "  '8106318',\n",
+       "  '4314175',\n",
+       "  '5605159',\n",
+       "  '8106321',\n",
+       "  '4314169',\n",
+       "  '4314174'],\n",
+       " '489204': ['855967',\n",
+       "  '8360196',\n",
+       "  '3728444',\n",
+       "  '2236494',\n",
+       "  '3728441',\n",
+       "  '1310101',\n",
+       "  '6652053',\n",
+       "  '8360190',\n",
+       "  '855969',\n",
+       "  '1310106'],\n",
+       " '833860': ['3437288',\n",
+       "  '1524403',\n",
+       "  '1524406',\n",
+       "  '2188108',\n",
+       "  '280004',\n",
+       "  '7647523',\n",
+       "  '2829181',\n",
+       "  '8683095',\n",
+       "  '6230227',\n",
+       "  '2829180'],\n",
+       " '47923': ['5032362',\n",
+       "  '8641107',\n",
+       "  '1868437',\n",
+       "  '8418681',\n",
+       "  '8418683',\n",
+       "  '1681334',\n",
+       "  '6191',\n",
+       "  '6919836',\n",
+       "  '4297620',\n",
+       "  '1681332'],\n",
+       " '915593': ['6923052',\n",
+       "  '3538162',\n",
+       "  '1396704',\n",
+       "  '82105',\n",
+       "  '7742098',\n",
+       "  '7837086',\n",
+       "  '3523599',\n",
+       "  '82113',\n",
+       "  '3538159',\n",
+       "  '2210593'],\n",
+       " '855410': ['8651776', '8651775', '8651772', '8651771', '8651770'],\n",
+       " '1103812': ['8220086',\n",
+       "  '8220089',\n",
+       "  '3843267',\n",
+       "  '4824831',\n",
+       "  '3425644',\n",
+       "  '7038638',\n",
+       "  '3197208',\n",
+       "  '2379408',\n",
+       "  '5190505',\n",
+       "  '3843263'],\n",
+       " '146187': ['315525',\n",
+       "  '8434625',\n",
+       "  '744165',\n",
+       "  '8434623',\n",
+       "  '7956019',\n",
+       "  '8434619',\n",
+       "  '1028971',\n",
+       "  '8434626',\n",
+       "  '8434622',\n",
+       "  '4921740'],\n",
+       " '264014': ['6337909',\n",
+       "  '1610714',\n",
+       "  '1610712',\n",
+       "  '3666584',\n",
+       "  '5328095',\n",
+       "  '96854',\n",
+       "  '5583426',\n",
+       "  '5950723',\n",
+       "  '3338823',\n",
+       "  '3201487'],\n",
+       " '183378': ['6548233',\n",
+       "  '8794302',\n",
+       "  '2089154',\n",
+       "  '8779628',\n",
+       "  '2533260',\n",
+       "  '4371183',\n",
+       "  '8794304',\n",
+       "  '424997',\n",
+       "  '6548235',\n",
+       "  '8577215'],\n",
+       " '148538': ['4264129',\n",
+       "  '5077707',\n",
+       "  '8283527',\n",
+       "  '7407804',\n",
+       "  '985488',\n",
+       "  '985492',\n",
+       "  '4539657',\n",
+       "  '7407803',\n",
+       "  '985491',\n",
+       "  '5077704'],\n",
+       " '131843': ['8305152',\n",
+       "  '985994',\n",
+       "  '8305153',\n",
+       "  '3841396',\n",
+       "  '8305156',\n",
+       "  '8710813',\n",
+       "  '985995',\n",
+       "  '8305158',\n",
+       "  '985988',\n",
+       "  '985991'],\n",
+       " '1037798': ['8760864',\n",
+       "  '8760867',\n",
+       "  '8760873',\n",
+       "  '2157456',\n",
+       "  '8820474',\n",
+       "  '3641634',\n",
+       "  '3030655',\n",
+       "  '4788864',\n",
+       "  '3030654',\n",
+       "  '2914156'],\n",
+       " '87452': ['8819111',\n",
+       "  '8152222',\n",
+       "  '8333919',\n",
+       "  '4634899',\n",
+       "  '5751686',\n",
+       "  '8436579',\n",
+       "  '8436578',\n",
+       "  '8333912',\n",
+       "  '8436576',\n",
+       "  '7843982'],\n",
+       " '1063750': ['1105778',\n",
+       "  '4337527',\n",
+       "  '2981566',\n",
+       "  '5906625',\n",
+       "  '5331835',\n",
+       "  '2997653',\n",
+       "  '1793593',\n",
+       "  '3406147',\n",
+       "  '3633592',\n",
+       "  '1268881'],\n",
+       " '443396': ['8079046',\n",
+       "  '456708',\n",
+       "  '4792650',\n",
+       "  '4792649',\n",
+       "  '1465664',\n",
+       "  '8079040',\n",
+       "  '3526411',\n",
+       "  '3526407',\n",
+       "  '7922077',\n",
+       "  '3007982'],\n",
+       " '1121402': ['182370',\n",
+       "  '8052622',\n",
+       "  '182373',\n",
+       "  '8052624',\n",
+       "  '5189913',\n",
+       "  '182368',\n",
+       "  '188213',\n",
+       "  '188217',\n",
+       "  '188218',\n",
+       "  '188215'],\n",
+       " '156493': ['2259183',\n",
+       "  '3288601',\n",
+       "  '3288596',\n",
+       "  '1277720',\n",
+       "  '3288600',\n",
+       "  '8182161',\n",
+       "  '1277727',\n",
+       "  '95515',\n",
+       "  '8182166',\n",
+       "  '8182165'],\n",
+       " '1133167': ['2276678',\n",
+       "  '8160230',\n",
+       "  '190809',\n",
+       "  '6299575',\n",
+       "  '5674622',\n",
+       "  '2623303',\n",
+       "  '2613290',\n",
+       "  '5674623',\n",
+       "  '1883281',\n",
+       "  '7218019'],\n",
+       " '1124210': ['7715335',\n",
+       "  '522219',\n",
+       "  '8026737',\n",
+       "  '1689639',\n",
+       "  '931165',\n",
+       "  '2728448',\n",
+       "  '7443586',\n",
+       "  '6636931',\n",
+       "  '931162',\n",
+       "  '8026735'],\n",
+       " '962179': ['6575560',\n",
+       "  '8811426',\n",
+       "  '8689053',\n",
+       "  '6980697',\n",
+       "  '8689058',\n",
+       "  '5919341',\n",
+       "  '2978870',\n",
+       "  '3705165',\n",
+       "  '4606390',\n",
+       "  '4309122'],\n",
+       " '1121709': ['1774646',\n",
+       "  '376823',\n",
+       "  '376819',\n",
+       "  '2926714',\n",
+       "  '7579643',\n",
+       "  '3750124',\n",
+       "  '3709758',\n",
+       "  '5375182',\n",
+       "  '428239',\n",
+       "  '1774647'],\n",
+       " '1129237': ['7911557',\n",
+       "  '6343521',\n",
+       "  '998751',\n",
+       "  '5906130',\n",
+       "  '7769728',\n",
+       "  '128984',\n",
+       "  '3641168',\n",
+       "  '5831781',\n",
+       "  '6343520',\n",
+       "  '3905057'],\n",
+       " '1106007': ['1334335',\n",
+       "  '5836920',\n",
+       "  '7726655',\n",
+       "  '2143418',\n",
+       "  '5174765',\n",
+       "  '4089153',\n",
+       "  '5279699',\n",
+       "  '8811080',\n",
+       "  '1530299',\n",
+       "  '2513608'],\n",
+       " '1112341': ['8139255',\n",
+       "  '8139256',\n",
+       "  '8139258',\n",
+       "  '2096427',\n",
+       "  '2096429',\n",
+       "  '8139249',\n",
+       "  '8139257',\n",
+       "  '6102033',\n",
+       "  '1493657',\n",
+       "  '4977768'],\n",
+       " '573724': ['394136',\n",
+       "  '2417985',\n",
+       "  '7104825',\n",
+       "  '394139',\n",
+       "  '8444730',\n",
+       "  '7104826',\n",
+       "  '5962424',\n",
+       "  '7199667',\n",
+       "  '7199675',\n",
+       "  '148753'],\n",
+       " '359349': ['576629',\n",
+       "  '68653',\n",
+       "  '2293820',\n",
+       "  '68649',\n",
+       "  '3223833',\n",
+       "  '2826510',\n",
+       "  '5615181',\n",
+       "  '3223831',\n",
+       "  '6108721',\n",
+       "  '68648'],\n",
+       " '182539': ['8757178',\n",
+       "  '57448',\n",
+       "  '57444',\n",
+       "  '8757181',\n",
+       "  '57447',\n",
+       "  '2909960',\n",
+       "  '8515182',\n",
+       "  '1307235',\n",
+       "  '8299665',\n",
+       "  '7371262'],\n",
+       " '1113437': ['8128798',\n",
+       "  '8128790',\n",
+       "  '3436902',\n",
+       "  '8128796',\n",
+       "  '6021898',\n",
+       "  '4486954',\n",
+       "  '1768729',\n",
+       "  '3325914',\n",
+       "  '4981632',\n",
+       "  '657400']}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_rank_file=\"./relevance_file/DAATBM25withRelevance.txt\"\n",
+    "ground_true_file=\"./qrel_file/ordered-qrel-msmarco-2019.txt\"\n",
+    "system_ranking=read_data(system_rank_file)\n",
+    "ground_true=read_data_ground_true(ground_true_file,system_ranking.keys())\n",
+    "system_ranking"
    ]
   }
  ],
@@ -18,7 +484,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
