--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
     "            parts=line.strip().split()\n",
     "            qid,doc_id,relevance=parts[0],str(int(parts[2])),int(parts[3])\n",
     "            if qid not in system_ranking:\n",
-    "                system_ranking[qid]={}\n",
-    "            system_ranking[qid][doc_id]=relevance\n",
+    "                system_ranking[qid]=[]\n",
+    "            system_ranking[qid].append((doc_id,relevance))\n",
     "        \n",
     "    return system_ranking\n",
     "\n",
@@ -34,43 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_rank_file=\"./relevance_file/DAATBM25withRelevance.txt\"\n",
+    "recall_base_file=\"./qrel_file/id_counts.txt\"\n",
+    "system_ranking=read_data(system_rank_file)\n",
+    "recall_bases=read_data_recall_base(recall_base_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'8412684': 3,\n",
-       " '527689': 0,\n",
-       " '3539483': 0,\n",
-       " '8635981': 0,\n",
-       " '527698': 0,\n",
-       " '527695': 0,\n",
-       " '7267248': 0,\n",
-       " '6999143': 0,\n",
-       " '527694': 0,\n",
-       " '1726': 0}"
+       "'8412684'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "system_rank_file=\"./relevance_file/DAATBM25withRelevance.txt\"\n",
-    "recall_base_file=\"./qrel_file/id_counts.txt\"\n",
-    "system_ranking=read_data(system_rank_file)\n",
-    "recall_bases=read_data_recall_base(recall_base_file)\n",
-    "system_ranking['19335']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "system_ranking['19335'][0][0]\n",
+    "\n",
     "\n",
     "    "
    ]
