Add ap and map in PRNDCG.ipynb

--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dati di Ranking per la Query 19335: 8412684\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Accesso e Analisi dei Dati\n",
     "\n",
@@ -104,6 +96,46 @@
     "\n",
     "# Output: Visualizzazione dei dati di ranking per la query specifica\n",
     "print(f\"Dati di Ranking per la Query {sample_query_id}: {sample_ranking_data}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_map(system_ranking, recall_bases):\n",
+    "    map_scores = []\n",
+    "\n",
+    "    for query in system_ranking:\n",
+    "        num = 0\n",
+    "        count = 0\n",
+    "        relevants = 1\n",
+    "\n",
+    "        for element in system_ranking[query]:\n",
+    "            if count != 10:\n",
+    "                if element[1] > 0:\n",
+    "                    num += relevants / (count + 1)\n",
+    "                    relevants += 1\n",
+    "                count += 1\n",
+    "        \n",
+    "        rb = recall_bases[query]\n",
+    "\n",
+    "        ap = num / rb\n",
+    "        map_scores.append(ap)\n",
+    "        print(f\"AP {query}: {ap}\")\n",
+    "\n",
+    "    mean_map = sum(map_scores) / len(map_scores)\n",
+    "    print(f\"MAP: {mean_map}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_map(system_ranking, recall_bases)"
    ]
   }
  ],
