Add functions to calculate Mean Average Precision (MAP) and Mean Reciprocal Rank (MRR)

--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -20,6 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Funzioni di Lettura\n",
     "\n",
     "# read_data: Legge i dati di ranking da un file e li organizza in un dizionario\n",
@@ -71,6 +80,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calculate_map(system_ranking, recall_bases):\n",
+    "    map_scores = []\n",
+    "\n",
+    "    for query in system_ranking:\n",
+    "        num = 0\n",
+    "        count = 0\n",
+    "        relevants = 1\n",
+    "\n",
+    "        for element in system_ranking[query]:\n",
+    "            if count != 10:\n",
+    "                if element[1] > 0:\n",
+    "                    num += relevants / (count + 1)\n",
+    "                    relevants += 1\n",
+    "                count += 1\n",
+    "        \n",
+    "        rb = recall_bases[query]\n",
+    "\n",
+    "        ap = num / rb\n",
+    "        map_scores.append(ap)\n",
+    "        print(f\"AP {query}: {ap}\")\n",
+    "\n",
+    "    map = sum(map_scores) / len(map_scores)\n",
+    "    print(f\"MAP: {map}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_mrr(system_ranking):\n",
+    "    mrr_scores = []\n",
+    "    for query in system_ranking:\n",
+    "        count = 0\n",
+    "\n",
+    "        for element in system_ranking[query]:\n",
+    "            if element[1] > 0:\n",
+    "                rr = 1 / (count + 1)\n",
+    "                mrr_scores.append(rr)\n",
+    "                print(f\"RR {query}: {rr}\")\n",
+    "                break\n",
+    "            if count == 9:\n",
+    "                mrr_scores.append(0)\n",
+    "                print(f\"RR {query}: 0\")\n",
+    "                break\n",
+    "            count += 1\n",
+    "        \n",
+    "    mrr = sum(mrr_scores) / len(mrr_scores)\n",
+    "    print(f\"MRR: {mrr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Caricamento Dati\n",
     "\n",
     "# Caricamento dei dati di ranking e recall dai file specificati\n",
@@ -104,29 +171,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_map(system_ranking, recall_bases):\n",
-    "    map_scores = []\n",
+    "folder_path = \"relevance_file\"\n",
     "\n",
-    "    for query in system_ranking:\n",
-    "        num = 0\n",
-    "        count = 0\n",
-    "        relevants = 1\n",
-    "\n",
-    "        for element in system_ranking[query]:\n",
-    "            if count != 10:\n",
-    "                if element[1] > 0:\n",
-    "                    num += relevants / (count + 1)\n",
-    "                    relevants += 1\n",
-    "                count += 1\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".txt\"):\n",
+    "        path = os.path.join(folder_path, filename)\n",
     "        \n",
-    "        rb = recall_bases[query]\n",
-    "\n",
-    "        ap = num / rb\n",
-    "        map_scores.append(ap)\n",
-    "        print(f\"AP {query}: {ap}\")\n",
-    "\n",
-    "    mean_map = sum(map_scores) / len(map_scores)\n",
-    "    print(f\"MAP: {mean_map}\")"
+    "        system_ranking = read_data(path)\n",
+    "        calculate_map(system_ranking, recall_bases)"
    ]
   },
   {
@@ -135,7 +187,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_map(system_ranking, recall_bases)"
+    "folder_path = \"relevance_file\"\n",
+    "\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".txt\"):\n",
+    "        path = os.path.join(folder_path, filename)\n",
+    "        \n",
+    "        system_ranking = read_data(path)\n",
+    "        calculate_mrr(system_ranking)"
    ]
   }
  ],
