Update notebook with English translations

--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisi dei Dati di Ranking e Recall\n",
+    "# Ranking and Recall Data Analysis\n",
     "\n",
-    "Questo notebook è dedicato all'analisi dei dati di ranking e recall relativi al progetto MIRCV. Esamina le prestazioni del sistema di ranking sviluppato, utilizzando dati estratti dai file di testo. Le seguenti funzioni personalizzate sono utilizzate per leggere, processare e preparare i dati per un'analisi dettagliata.\n",
+    "This notebook is dedicated to the analysis of ranking and recall data related to the MIRCV project. It examines the performance of the developed ranking system using data extracted from text files. The following custom functions are used to read, process, and prepare the data for detailed analysis.\n",
     "\n",
-    "## Struttura del Notebook\n",
-    "- **Funzioni di Lettura**: Definiscono il metodo di lettura dei dati da file di testo e la loro organizzazione in strutture di dati utili.\n",
-    "- **Caricamento Dati**: Carica i dati di ranking e recall da file specifici per l'analisi.\n",
-    "- **Accesso e Analisi dei Dati**: Visualizza e analizza parti specifiche dei dati per ottenere insights iniziali sulle prestazioni del sistema di ranking."
+    "## Notebook Structure\n",
+    "- **Reading Functions**:  Define the method for reading data from text files and organizing them into useful data structures.\n",
+    "- **Data Loading**: Loads ranking and recall data from specific files for analysis.\n",
+    "- **Data Access and Analysis**: Displays and analyzes specific parts of the data to gain initial insights into the performance of the ranking system."
    ]
   },
   {
@@ -29,17 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Funzioni di Lettura\n",
+    "# Reading Functions\n",
     "\n",
-    "# read_data: Legge i dati di ranking da un file e li organizza in un dizionario\n",
+    "# read_data: Reads ranking data from a file and organizes it into a dictionary\n",
     "def read_data(file_path):\n",
-    "    \"\"\"Legge i dati di ranking da un file.\n",
+    "    \"\"\"Reads ranking data from a file.\n",
     "\n",
     "    Args:\n",
-    "        file_path (str): Percorso del file da leggere.\n",
+    "        file_path (str): Path of the file to read.\n",
     "\n",
     "    Returns:\n",
-    "        dict: Dizionario contenente i dati di ranking.\n",
+    "        dict: Dictionary containing the ranking data.\n",
     "    \"\"\"\n",
     "    system_ranking = {}\n",
     "    with open(file_path, 'r') as file:\n",
@@ -52,15 +52,15 @@
     "        \n",
     "    return system_ranking\n",
     "\n",
-    "# read_data_recall_base: Legge i dati di recall base da un file e li organizza in un dizionario\n",
+    "# read_data_recall_base: Reads base recall data from a file and organizes it into a dictionary\n",
     "def read_data_recall_base(file_path):\n",
-    "    \"\"\"Legge i dati di recall base da un file.\n",
+    "    \"\"\"Reads base recall data from a file.\n",
     "\n",
     "    Args:\n",
-    "        file_path (str): Percorso del file da leggere.\n",
+    "        file_path (str): Path of the file to read.\n",
     "\n",
     "    Returns:\n",
-    "        dict: Dizionario contenente i dati di recall base.\n",
+    "        dict: Dictionary containing the base recall data.\n",
     "    \"\"\"\n",
     "    recalls = {}\n",
     "    with open(file_path, 'r') as file:\n",
@@ -138,13 +138,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Caricamento Dati\n",
+    "# Data Loading\n",
     "\n",
-    "# Caricamento dei dati di ranking e recall dai file specificati\n",
+    "# Loading ranking and recall data from the specified files\n",
     "system_rank_file = \"./relevance_file/DAATBM25withRelevance.txt\"\n",
     "recall_base_file = \"./qrel_file/id_counts.txt\"\n",
     "\n",
-    "# Utilizzo delle funzioni di lettura per caricare i dati\n",
+    "# Using reading functions to load the data\n",
     "system_ranking = read_data(system_rank_file)\n",
     "recall_bases = read_data_recall_base(recall_base_file)"
    ]
@@ -155,13 +155,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accesso e Analisi dei Dati\n",
+    "# Data Access and Analysis\n",
     "\n",
-    "# Accesso a un elemento specifico del dizionario system_ranking per l'analisi\n",
+    "# Accessing a specific element in the system_ranking dictionary for analysis\n",
     "sample_query_id = '19335'\n",
     "sample_ranking_data = system_ranking[sample_query_id][0][0]\n",
     "\n",
-    "# Output: Visualizzazione dei dati di ranking per la query specifica\n",
+    "# Output: Displaying ranking data for the specific query\n",
     "print(f\"Dati di Ranking per la Query {sample_query_id}: {sample_ranking_data}\")"
    ]
   },
