Add functions to calculate nDCG and write scores to files

--- a/PRNDCG.ipynb
+++ b/PRNDCG.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import math"
    ]
   },
   {
@@ -71,7 +72,51 @@
     "                recalls[qid] = {}\n",
     "            recalls[qid] = base\n",
     "\n",
-    "    return recalls"
+    "    return recalls\n",
+    "\n",
+    "# read_data: Reads ranking data from a file and organizes it into a dictionary\n",
+    "def read_data_2(file_path):\n",
+    "    \"\"\"Reads ranking data from a file.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str): Path of the file to read.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary containing the ranking data.\n",
+    "    \"\"\"\n",
+    "    system_ranking = {}\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split()\n",
+    "            qid, doc_id = parts[0], str(int(parts[2]))\n",
+    "            if qid not in system_ranking:\n",
+    "                system_ranking[qid] = []\n",
+    "            system_ranking[qid].append(doc_id)\n",
+    "        \n",
+    "    return system_ranking\n",
+    "\n",
+    "# read_data_ground_true: Reads ground truth data from a file and organizes it into a dictionary\n",
+    "def read_data_ground_true(file_path, keys):\n",
+    "    \"\"\"Reads ground truth data from a file.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str): Path of the file to read.\n",
+    "        keys (list): List of query IDs to consider.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary containing the ground truth data.\n",
+    "    \"\"\"\n",
+    "    ground_true = {}\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split()\n",
+    "            qid, doc_id, relevance = parts[0], str(int(parts[2])), int(parts[3])\n",
+    "            if qid not in keys:\n",
+    "                continue\n",
+    "            if qid not in ground_true:\n",
+    "                ground_true[qid] = {}\n",
+    "            ground_true[qid][doc_id] = relevance\n",
+    "    return ground_true"
    ]
   },
   {
@@ -80,6 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to calculate Mean Average Precision (MAP)\n",
     "def calculate_map(system_ranking, recall_bases):\n",
     "    map_scores = []\n",
     "\n",
@@ -101,8 +147,8 @@
     "        map_scores.append(ap)\n",
     "        print(f\"AP {query}: {ap}\")\n",
     "\n",
-    "    map = sum(map_scores) / len(map_scores)\n",
-    "    print(f\"MAP: {map}\")"
+    "    map_avg = sum(map_scores) / len(map_scores)\n",
+    "    print(f\"MAP: {map_avg}\")"
    ]
   },
   {
@@ -111,6 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to calculate Mean Reciprocal Rank (MRR)\n",
     "def calculate_mrr(system_ranking):\n",
     "    mrr_scores = []\n",
     "    for query in system_ranking:\n",
@@ -128,8 +175,51 @@
     "                break\n",
     "            count += 1\n",
     "        \n",
-    "    mrr = sum(mrr_scores) / len(mrr_scores)\n",
-    "    print(f\"MRR: {mrr}\")"
+    "    mrr_avg = sum(mrr_scores) / len(mrr_scores)\n",
+    "    print(f\"MRR: {mrr_avg}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dcg: Calculates the Discounted Cumulative Gain\n",
+    "def dcg(relevance, k) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculates the Discounted Cumulative Gain (DCG).\n",
+    "\n",
+    "    Args:\n",
+    "        relevance (list): List of relevance scores.\n",
+    "        k (int): The depth of ranking to consider.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The calculated DCG.\n",
+    "    \"\"\"\n",
+    "    return relevance[0] + sum([relevance[i] / math.log(i + 1, 2) for i in range(1, min(k, len(relevance)))])\n",
+    "\n",
+    "# ndcg: Calculates the Normalized Discounted Cumulative Gain\n",
+    "def ndcg(system_ranking, ground_true, k):\n",
+    "    \"\"\"\n",
+    "    Calculates the Normalized Discounted Cumulative Gain (nDCG).\n",
+    "\n",
+    "    Args:\n",
+    "        system_ranking (list): List of ranked items.\n",
+    "        ground_true (dict): Ground truth relevance scores.\n",
+    "        k (int): The depth of ranking to consider.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The calculated nDCG.\n",
+    "    \"\"\"\n",
+    "    # Get relevance scores for items in the system ranking\n",
+    "    relevances = [ground_true.get(rank, 0) for rank in system_ranking]\n",
+    "\n",
+    "    # Get ideal relevance scores\n",
+    "    base_ideal = [i for i in ground_true.values()]\n",
+    "\n",
+    "    # Calculate and return nDCG\n",
+    "    return dcg(relevances, k) / dcg(base_ideal, k)"
    ]
   },
   {
@@ -140,39 +230,46 @@
    "source": [
     "# Data Loading\n",
     "\n",
-    "# Loading ranking and recall data from the specified files\n",
-    "system_rank_file = \"./relevance_file/DAATBM25withRelevance.txt\"\n",
+    "# Loading recall data from the specified files\n",
     "recall_base_file = \"./qrel_file/id_counts.txt\"\n",
+    "ground_true_file=\"./qrel_file/ordered-qrel-msmarco-2019.txt\"\n",
     "\n",
     "# Using reading functions to load the data\n",
-    "system_ranking = read_data(system_rank_file)\n",
-    "recall_bases = read_data_recall_base(recall_base_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data Access and Analysis\n",
+    "recall_bases = read_data_recall_base(recall_base_file)\n",
     "\n",
-    "# Accessing a specific element in the system_ranking dictionary for analysis\n",
-    "sample_query_id = '19335'\n",
-    "sample_ranking_data = system_ranking[sample_query_id][0][0]\n",
-    "\n",
-    "# Output: Displaying ranking data for the specific query\n",
-    "print(f\"Dati di Ranking per la Query {sample_query_id}: {sample_ranking_data}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Using reading functions to load the data\n",
+    "recall_bases = read_data_recall_base(recall_base_file)\n",
     "folder_path = \"relevance_file\"\n",
+    "ndcg_path = \"NDCG_file\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate and write nDCG scores to files\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".txt\"):\n",
+    "        path = os.path.join(folder_path, filename)\n",
+    "        path_ndcg = os.path.join(ndcg_path, filename)\n",
+    "        \n",
+    "        system_ranking = read_data_2(path)\n",
+    "        ground_true = read_data_ground_true(ground_true_file, system_ranking.keys())\n",
     "\n",
+    "        with open(path_ndcg, 'w') as file:\n",
+    "            for qid in system_ranking.keys():\n",
+    "                file.write(qid + \"\\t\" + str(ndcg(system_ranking[qid], ground_true[qid], 10)) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate and print MAP for each ranking file\n",
     "for filename in os.listdir(folder_path):\n",
     "    if filename.endswith(\".txt\"):\n",
     "        path = os.path.join(folder_path, filename)\n",
@@ -187,14 +284,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = \"relevance_file\"\n",
-    "\n",
+    "# Calculate and print MRR for each ranking file\n",
     "for filename in os.listdir(folder_path):\n",
     "    if filename.endswith(\".txt\"):\n",
     "        path = os.path.join(folder_path, filename)\n",
     "        \n",
     "        system_ranking = read_data(path)\n",
     "        calculate_mrr(system_ranking)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MAP: 0.0890959203131625 daat bm25\n",
+    "\n",
+    "MAP: 0.0826614187414304 daat tfidf\n",
+    "\n",
+    "MAP: 0.08909592031316252 dynamicpruning bm25\n",
+    "\n",
+    "MAP: 0.08266141874143042 dynamicpruning tfidf\n",
+    "\n",
+    "\n",
+    "MRR: 0.712015503875969 daat bm25\n",
+    "\n",
+    "MRR: 0.6866925064599484 daat tfidf\n",
+    "\n",
+    "MRR: 0.7120155038759689 dynamicpruning bm25\n",
+    "\n",
+    "MRR: 0.6866925064599484 dynamicpruning tfidf"
    ]
   }
  ],
